tests/fixtures/invalid/str_lshift_float.py
# Cannot left shift Str and Float
x: float = "hello" << 1.0
